done with styling and squashed some bugs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,9 +46,22 @@ body {
     border: 1px solid #ccc;
     margin-top: 50px;
     padding: 10px;
-    text-align: center;
     vertical-align: middle;
 }
+.panel {
+    padding:0;
+    border:none;
+}
+th {
+    font-size:18px;
+    color:#eee;
+    background-color:#68c62a;
+}
+
+#tableThing {
+    border-radius: 6px;
+}
+
 .row {
     margin:0;
 }
@@ -223,7 +236,17 @@ body {
 .form-signUp .checkbox {
     font-weight: normal;
 }
-
+#logout, #login {
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    color: #777;
+    background-color: transparent;
+    text-decoration: none;
+    line-height: 20px;
+}
+#logout:hover, #login:hover {
+    color:#333;
+}
 .form-signUp .form-control {
     position: relative;
     height: auto;
